log
vi., 18 de mar. de 2022 22:04:27: 
 tests:  0|6
total_score: 0/70
924e8e3
vi., 18 de mar. de 2022 22:04:52: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1f3a181
vi., 18 de mar. de 2022 22:10:27: 
 list.c | 21 ++++++++++++++-------
 1 file changed, 14 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
1e6551d
vi., 18 de mar. de 2022 22:13:03: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
058795e
vi., 18 de mar. de 2022 22:14:00: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9804419
vi., 18 de mar. de 2022 22:14:16: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f63b478
vi., 18 de mar. de 2022 22:16:56: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bbf5c6f
vi., 18 de mar. de 2022 22:17:16: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
38a5e08
vi., 18 de mar. de 2022 22:20:42: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
f455952
vi., 18 de mar. de 2022 22:21:50: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
ac08c86
vi., 18 de mar. de 2022 22:23:02: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d3b08ab
vi., 18 de mar. de 2022 22:24:01: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
dc1828a
vi., 18 de mar. de 2022 22:28:31: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7bce3e7
vi., 18 de mar. de 2022 22:29:54: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
41132d2
vi., 18 de mar. de 2022 22:30:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bc362db
vi., 18 de mar. de 2022 22:35:36: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
04cd7ec
vi., 18 de mar. de 2022 22:37:07: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ce76bef
vi., 18 de mar. de 2022 22:38:37: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3bf3ee4
vi., 18 de mar. de 2022 22:38:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
73b05ba
vi., 18 de mar. de 2022 22:43:28: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
907436d
vi., 18 de mar. de 2022 22:47:41: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
06654a8
vi., 18 de mar. de 2022 22:49:49: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
e5fee5f
vi., 18 de mar. de 2022 22:59:49: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0979f3f
vi., 18 de mar. de 2022 23:05:08: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
24f8f9d
vi., 18 de mar. de 2022 23:07:02: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
6c2b58d
vi., 18 de mar. de 2022 23:09:03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
87d53cf
vi., 18 de mar. de 2022 23:09:17: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0d79a3c
vi., 18 de mar. de 2022 23:15:09: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
b3aa397
vi., 18 de mar. de 2022 23:16:51: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
0dc4d5e
vi., 18 de mar. de 2022 23:18:48: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
90883b8
vi., 18 de mar. de 2022 23:19:23: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
d3fcaa4
vi., 18 de mar. de 2022 23:20:28: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
bb41419
vi., 18 de mar. de 2022 23:30:36: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
b52008f
vi., 18 de mar. de 2022 23:32:52: 
 list.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:104:35: error: format '%i' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
        printf("\nel siguiente al %i es %i\n", list->head->data , list->head->next->data);
                                   ^
list.c:104:41: error: format '%i' expects argument of type 'int', but argument 3 has type 'void *' [-Werror=format=]
        printf("\nel siguiente al %i es %i\n", list->head->data , list->head->next->data);
                                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
6264128
vi., 18 de mar. de 2022 23:33:45: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d195be4
vi., 18 de mar. de 2022 23:35:13: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|2
total_score: 45/70
c42bc45
vi., 18 de mar. de 2022 23:41:40: 
 list.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
 tests:  0|0
001b3f4
vi., 18 de mar. de 2022 23:42:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
38fc038
vi., 18 de mar. de 2022 23:48:33: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
8048b26
vi., 18 de mar. de 2022 23:49:57: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
210c3ca
vi., 18 de mar. de 2022 23:50:41: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
664311d
vi., 18 de mar. de 2022 23:55:13: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
f97b8c1
